--- a/source/sitemap.html
+++ b/source/sitemap.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="">
-    <title>ProjectName</title>
+    <meta name="description" content="Проект для Lifetour. Организация походов в горы">
+    <title>LifeTour</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
+    <link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-ExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
+
   <body>
     <div class="wrapper">
       <header>
-        <div class="container"></div>
+        <div class="container">
+          <a href="index.html">
+            <img src="./img/sprite/logo.svg" alt="Лого Lifetour." width="142" height="42">
+          </a>
+        </div>
       </header>
       <main>
         <section class="intro">
           <div class="container">
             <h1>Разводящая страница</h1>
-            <p>На многостраничных сайтах используйте эту страницу для создания списков всех страниц и ссылок на них.</p>
-            <p>Это делается для удобства тестирования и для быстрого доступа к нужной странице.</p>
-            <h2>Пример</h2>
             <ol>
               <li>
-                <a href="index.html">Главная — index.html</a>
+                <a href="index.html">Страница LifeTour. Организация походов в горы</a>
               </li>
               <li>
-                <a href="#">Название страницы (состояние страницы, если отдельное) — ссылка на страницу.</a>
+                <a href="https://www.figma.com/file/V8jx4tLuWTn12g1SfPt2FG/%D0%9F%D1%83%D1%82%D0%B5%D1%88%D0%B5%D1%81%D1%82%D0%B2%D0%B8%D1%8F.-%D0%90%D0%BA%D1%81%D0%B5%D0%BB%D0%B5%D1%80%D0%B0%D1%82%D0%BE%D1%80-%D0%A4%D1%80%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D0%B4-(16)-(Copy)?type=design&node-id=131%3A4670&mode=dev">UI kit</a>
               </li>
             </ol>
           </div>
