--- a/source/index.html
+++ b/source/index.html
@@ -4,59 +4,285 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Описание проекта">
-    <title>ProjectName</title>
+    <meta name="description" content="Проект для Lifetour. Организация походов в горы">
+    <title>LifeTour</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
+    <link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-ExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <div class="container"></div>
+
+      <header class="header">
+        <div class="container">
+          <div class="header__wrapper">
+            <a class="header__logo-link" href="index.html" >
+              <svg width="142" height="42">
+                <use href="./img/sprite.svg#logo-lifetour"></use>
+              </svg>
+            </a>
+            <button class="header__menu-btn" type="button">
+              <span class="visually-hidden">Кнопка открыть/закрыть меню.</span>
+            </button>
+
+            <nav class="header__navigation navigation">
+              <ul class="navigation__list">
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#tours">Туры</a>
+                </li>
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#education">Обучение</a>
+                </li>
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#about-us">О нас</a>
+                </li>
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#reviews">Отзывы</a>
+                </li>
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#gallery">Фотографии</a>
+                </li>
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#contacts">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+
+            <a class="header__phone-link" href="tel:88007253232">8 800 725-32-32</a>
+          </div>
+        </div>
       </header>
-      <main>
-        <section class="intro">
+
+      <main class="main">
+        <section class="main__hero hero">
+          <h1>LifeTour - организация походов в горы.</h1>
           <div class="container">
-            <h1>Тестовая страница.</h1>
-            <p>На данной странице показан пример модальных окон.</p>
-            <p>Перед началом разработки не забудьте удалить всё содержимое &#8249;main&#8250;&#8249;&#8260;main&#8250;.</p>
-            <p><a class="btn" href="#" data-open-modal="feedback">modal--feedback link</a></p>
-            <p><a class="btn" href="#" data-open-modal="success">modal--success link</a></p>
+            <!-- Slider main container -->
+            <div class="hero__swiper swiper">
+              <!-- Additional required wrapper -->
+              <div class="hero__swiper-wrapper swiper-wrapper">
+                <!-- Slides -->
+                <div class="hero__swiper-slide hero__swiper-slide--caucasus swiper-slide">
+                  <div class="hero__overlay">
+                    <div class="hero__info">
+                      <h2>Захватывающие вершины Кавказа</h2>
+                      <p>
+                        В сопровождении опытных гидов вы пройдёте
+                        через потрясающие ландшафты и совершите
+                        восход на вершину горы Чегет.
+                      </p>
+                      <a href="#" class="hero__btn btn">Смотреть тур</a>
+                      <div class="hero__video-wrapper">
+
+                      </div>
+                      <div class="hero__desc">
+                        <span>
+                          <svg width="12" height="12">
+                            <use href="./img/sprite.svg#moon"></use>
+                          </svg>
+                          6 дней/5 ночей
+                        </span>
+                        <span>
+                          <svg width="12" height="12">
+                            <use href="./img/sprite.svg#level"></use>
+                          </svg>
+                          Высокая сложность
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="hero__swiper-slide hero__swiper-slide--kamchatka swiper-slide">
+                  <div class="hero__overlay">
+                    <div class="hero__info">
+                      <h2>Невероятная природа Камчатки</h2>
+                      <p>
+                        Незабываемое приключение, во время которого
+                        вы отправитесь в путешествие по одному из самых
+                        нетронутых уголков дикой природы в мире.
+                      </p>
+                      <a href="#" class="hero__btn btn">Смотреть тур</a>
+                      <div class="hero__photo-wrapper">
+
+                      </div>
+                      <div class="hero__desc">
+                        <span>
+                          <svg width="12" height="12">
+                            <use href="./img/sprite.svg#moon"></use>
+                          </svg>
+                          9 дней/10 ночей
+                        </span>
+                        <span>
+                          <svg width="12" height="12">
+                            <use href="./img/sprite.svg#level"></use>
+                          </svg>
+                          Средняя сложность
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="hero__swiper-slide hero__swiper-slide--altai swiper-slide">
+                  <div class="hero__overlay">
+                    <div class="hero__info">
+                      <h2>Магические пейзажи Алтайского Края</h2>
+                      <p>
+                        Алтайский трекинг-тур — это захватывающее
+                        приключение с посещением магических
+                        и&nbsp;захватывающих дух ландшафтов Алтайских гор.
+                      </p>
+                      <a href="#" class="hero__btn btn">Смотреть тур</a>
+                      <div class="hero__audio-wrapper">
+
+                      </div>
+                      <div class="hero__desc">
+                        <span>
+                          <svg width="12" height="12">
+                            <use href="./img/sprite.svg#moon"></use>
+                          </svg>
+                          8 дней/7 ночей
+                        </span>
+                        <span>
+                          <svg width="12" height="12">
+                            <use href="./img/sprite.svg#level"></use>
+                          </svg>
+                          Легкая сложность
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Navigation pagination -->
+              <div class="hero__swiper-pagination swiper-pagination"></div>
+            </div>
+          </div>
+        </section>
+
+
+        <section class="main__contacts contacts" id="contacts">
+          <div class="">
+            <div class="contacts__wrapper">
+              <div class="contacts__text-wrapper">
+                <div class="contacts__title-wrapper">
+                  <h2>Контакты</h2>
+                  <span>Контакты</span>
+                </div>
+                <p>
+                  Свяжитесь с нами любым удобным для&nbsp;вас&nbsp;способом
+                  или&nbsp;приходите к&nbsp;нам&nbsp;в&nbsp;гости. Мы будем рады поделиться
+                  увлекательными историями и подобрать для вас тур.
+                </p>
+                <ul class="contacts__list">
+                  <li class="contacts__item">
+                    <svg width="26" height="26">
+                      <use href="./img/sprite.svg#phone"></use>
+                    </svg>
+                    <h3>Телефон</h3>
+                    <a class="contacts__link-phone" href="tel:89837454545">+7 983 745-45-45</a>
+                  </li>
+                  <li class="contacts__item">
+                    <svg width="26" height="26">
+                      <use href="./img/sprite.svg#mail"></use>
+                    </svg>
+                    <h3>Email</h3>
+                    <a class="contacts__link-email" href="mailto:info@lifetour.com">info@lifetour.com</a>
+                  </li>
+                  <li class="contacts__item">
+                    <svg width="26" height="26">
+                      <use href="./img/sprite.svg#pin"></use>
+                    </svg>
+                    <h3>Адрес</h3>
+                    <p>г. Москва, пр-т Мира, д. 14, офис 101</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="contacts__map-wrapper">
+                <div class="contacts__map" id="map">
+                  <picture>
+                    <source media="(max-width: 767px)" type="image/webp" srcset="./img/map/map-mobile.webp 1x, ./img/map/map-mobile@2x.webp 2x" height="340">
+                    <source media="(max-width: 1023px)" type="image/webp" srcset="./img/map/map-tablet.webp 1x, ./img/map/map-tablet@2x.webp 2x" height="340">
+                    <source media="(max-width: 1199px)" type="image/webp" srcset="./img/map/map-laptop.webp 1x, ./img/map/map-laptop@2x.webp 2x" height="340">
+                    <source media="(min-width: 1200px)" type="image/webp" srcset="./img/map/map-desktop.webp 1x, ./img/map/map-desktop@2x.webp 2x" width="585" height="340">
+                    <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/map/map-mobile.jpg 1x, ./img/map/map-mobile@2x.jpg 2x" height="313">
+                    <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/map/map-tablet.jpg 1x, ./img/map/map-tablet@2x.jpg 2x" height="313">
+                    <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/map/map-laptop.jpg 1x, ./img/map/map-laptop@2x.jpg 2x" height="340">
+                    <img src="./img/map/map-desktop.jpg" srcset="./img/map/map-desktop.jpg 1x, ./img/map/map-desktop@2x.jpg 2x" width="585" height="324" alt="Мы на карте.">
+                  </picture>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
-      <footer>
-        <div class="container"></div>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__wrapper">
+            <div class="footer__links">
+              <a href="index.html" class="footer__logo-link">
+                <svg width="142" height="42">
+                  <use href="./img/sprite.svg#logo-footer"></use>
+                </svg>
+              </a>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a class="footer__link" href="#tours">Туры</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#education">Обучение</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#about-us">О нас</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#reviews">Отзывы</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#gallery">Фотографии</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#contacts">Контакты</a>
+                </li>
+              </ul>
+              <a href="tel:88007253232" class="footer__phone-link">8 800 725-32-32</a>
+            </div>
+            <ul class="footer__social-list">
+              <li class="footer__social-item">
+                <a href="#" class="footer__social-link">
+                  <svg width="16" height="9">
+                    <use href="./img/sprite.svg#vk"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a href="#" class="footer__social-link">
+                  <svg width="9" height="16">
+                    <use href="./img/sprite.svg#ok"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a href="#" class="footer__social-link">
+                  <svg width="14" height="15">
+                    <use href="./img/sprite.svg#reddit"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <a class="footer__privacy-policy" href="#">Политика конфиденциальности</a>
+          </div>
+        </div>
       </footer>
     </div>
 
-    <!-- Модалки -->
-    <div class="modal modal--preload" data-modal="feedback">
-      <div class="modal__wrapper">
-        <div class="modal__overlay" data-close-modal></div>
-        <div class="modal__content">
-          <p class="modal__description">Обычная модалка</p>
-          <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
-            <svg width="15" height="15">
-              <use xlink:href="img/sprite.svg#icon-close"></use>
-            </svg>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal modal--preload modal--fit-content modal--no-scale" data-modal="success">
-      <div class="modal__wrapper">
-        <div class="modal__overlay" data-close-modal></div>
-        <div class="modal__content">
-          <p class="modal__description">Размер этой модалки зависит от ширины контента,<br> отключена анимация-скейл</p>
-          <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
-            <svg width="15" height="15">
-              <use xlink:href="img/sprite.svg#icon-close"></use>
-            </svg>
-          </button>
-        </div>
-      </div>
-    </div>
 
     <script src="js/vendor.min.js"></script>
     <script src="js/main.min.js"></script>
