--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Проект для Lifetour. Организация походов в горы">
     <title>LifeTour</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
     <link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/Montserrat-ExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -99,8 +100,22 @@
                     </p>
                     <a href="#" class="hero__btn btn">Смотреть тур</a>
                     <div class="hero__video-wrapper">
-                      <div class="hero__video">
-
+                      <div class="hero__video video">
+                        <a class="video__link" href="https://youtu.be/9TZXsZItgdw">
+                          <picture>
+                            <source srcset="https://i.ytimg.com/vi_webp/9TZXsZItgdw/maxresdefault.webp" type="image/webp">
+                            <img class="video__media" src="https://i.ytimg.com/vi/9TZXsZItgdw/maxresdefault.jpg"  width="482" height="317" alt="Видео фитнес-центра SUPERGYM.">
+                          </picture>
+                          <div class="video__poster">
+                            <picture>
+                              <source media="(max-width: 1119px)" type="image/webp" srcset="./img/poster-video-tablet.webp 1x, ./img/poster-video-tablet@2x.webp 2x" width="442" height="300">
+                              <source media="(min-width: 1440px)" type="image/webp" srcset="./img/poster-video.webp 1x, ./img/poster-video@2x.webp 2x" width="482" height="317">
+                              <source media="(max-width: 1119px)" type="image/jpeg" srcset="./img/poster-video-tablet.jpg 1x, ./img/poster-video-tablet@2x.jpg 2x" width="442" height="300">
+                              <img src="./img/poster-video.jpg" srcset="./img/poster-video.jpg 1x, ./img/poster-video@2x.jpg 2x" width="482" height="317" alt="Постер к видео о Кавказе.">
+                            </picture>
+                          </div>
+                        </a>
+                        <button class="video__button" type="button" aria-label="Запустить видео."></button>
                       </div>
                     </div>
                     <div class="hero__desc">
@@ -458,6 +473,189 @@
             </div>
           </div>
         </section>
+
+        <section class="main__about-us about-us" id="about-us">
+          <div class="container">
+            <div class="about-us__wrapper">
+              <div class="about-us__content-wrapper">
+                <div class="about-us__title-wrapper">
+                  <span>О нас</span>
+                  <h2>О нас</h2>
+                </div>
+                <div class="about-us__info">
+                  <h3>История компании</h3>
+                  <p>
+                    В далёком 2000 году мы начали заниматься туризмом — походы, поездки,
+                    восхождения, нам это настолько понравилось, что мы этим стали жить.
+                    Спустя 5 лет, в 2005 году мы основали компанию, чтобы показывать людям
+                    удивительные места нашей страны.
+                  </p>
+                  <h3>Наша цель</h3>
+                  <p>
+                    Подарить вам незабываемые впечатления от похода в горы. Мы берём на себя
+                    все&nbsp;организационные вопросы. При&nbsp;организации мы обязательно учтём
+                    все ваши пожелания. Вам останется только наслаждаться незабываемым
+                    приключением в приятной компании.
+                  </p>
+                </div>
+              </div>
+              <div class="about-us__img-wrapper">
+                <picture>
+                  <source type="image/webp" media="(max-width: 767px)" srcset="./img/about-us-mobile.webp 1x, ./img/about-us-mobile@2x.webp 2x" width="434" height="400">
+                  <source type="image/webp" media="(max-width: 1199px)" srcset="./img/about-us-tablet.webp 1x, ./img/about-us-tablet@2x.webp 2x" width="542" height="350">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="./img/about-us-desktop.webp 1x, ./img/about-us-desktop@2x.webp 2x" width="808" height="474">
+                  <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/about-us-mobile.jpg 1x, ./img/about-us-mobile@2x.jpg 2x" width="434" height="400">
+                  <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/about-us-tablet.jpg 1x, ./img/about-us-tablet@2x.jpg 2x" width="542" height="350">
+                  <img src="./img/about-us-desktop.jpg" srcset="./img/about-us-desktop@2x.jpg 2x" type="image/jpeg" width="808" height="474" alt="Группа в походе.">
+                </picture>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="main__reviews reviews" id="reviews">
+          <div class="container">
+            <div class="reviews__wrapper">
+              <div class="reviews__title-wrapper">
+                <h2>Отзывы</h2>
+                <span>Отзывы</span>
+              </div>
+              <div class="reviews__swiper-buttons">
+                <button class="reviews__swiper-button reviews__swiper-button--prev" type="button">
+                  <svg width="14" height="9">
+                    <use href="./img/sprite.svg#arrow-left"></use>
+                  </svg>
+                </button>
+                <button class="reviews__swiper-button reviews__swiper-button--next" type="button">
+                  <svg width="14" height="9">
+                    <use href="./img/sprite.svg#arrow-right"></use>
+                  </svg>
+                </button>
+              </div>
+              <!-- Slider main container -->
+              <div class="reviews__swiper swiper">
+                <!-- Additional required wrapper -->
+                <div class="reviews__swiper-wrapper swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="reviews__swiper-slide swiper-slide">
+                    <div class="reviews__img-wrapper">
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="./img/reviews/reviews-img-1-mobile.webp 1x, ./img/reviews/reviews-img-1-mobile@2x.webp 2x" width="280" height="169">
+                        <source type="image/webp" media="(max-width: 1199px)" srcset="./img/reviews/reviews-img-1-tablet.webp 1x, ./img/reviews/reviews-img-1-tablet@2x.webp 2x" width="186" height="237">
+                        <source type="image/webp" media="(min-width: 1200px)" srcset="./img/reviews/reviews-img-1-desktop.webp 1x, ./img/reviews/reviews-img-1-desktop@2x.webp 2x" width="258" height="253">
+                        <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/reviews/reviews-img-1-mobile.jpg 1x, ./img/reviews/reviews-img-1-mobile@2x.jpg 2x" width="280" height="169">
+                        <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/reviews/reviews-img-1-tablet.jpg 1x, ./img/viewsurs/reviews-img-1-tablet@2x.jpg 2x" width="186" height="237">
+                        <img src="./img/reviews/reviews-img-1-desktop.jpg" srcset="./img/reviews/reviews-img-1-desktop@2x.jpg 2x" type="image/jpeg" width="258" height="253" alt="Фото Александра на фоне гор.">
+                      </picture>
+                    </div>
+                    <div class="reviews__info">
+                      <p>
+                        Осенью ходили в поход на Алтай с&nbsp;друзьями.
+                        Впечатления потрясающие! Инструкторы —
+                        настоящие эксперты — всему научили,
+                        все&nbsp;показали. Делились увлекательными
+                        историями о местах, людях, культуре места.
+                      </p>
+                      <p>
+                        С уверенностью могу сказать, что жизнь
+                        разделилась на до этого и после. Ещё никогда
+                        не&nbsp;отдыхал так душой и телом. Всем очень
+                        рекомендую!
+                      </p>
+                      <h3>Фролов Александр</h3>
+                      <span>38 лет, Москва</span>
+                    </div>
+                  </div>
+
+                  <div class="reviews__swiper-slide swiper-slide">
+                    <div class="reviews__img-wrapper">
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="./img/reviews/reviews-img-2-mobile.webp 1x, ./img/reviews/reviews-img-2-mobile@2x.webp 2x" width="280" height="169">
+                        <source type="image/webp" media="(max-width: 1199px)" srcset="./img/reviews/reviews-img-2-tablet.webp 1x, ./img/reviews/reviews-img-2-tablet@2x.webp 2x" width="186" height="237">
+                        <source type="image/webp" media="(min-width: 1200px)" srcset="./img/reviews/reviews-img-2-desktop.webp 1x, ./img/reviews/reviews-img-2-desktop@2x.webp 2x" width="258" height="253">
+                        <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/reviews/reviews-img-2-mobile.jpg 1x, ./img/reviews/reviews-img-2-mobile@2x.jpg 2x" width="280" height="169">
+                        <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/reviews/reviews-img-2-tablet.jpg 1x, ./img/viewsurs/reviews-img-2-tablet@2x.jpg 2x" width="186" height="237">
+                        <img src="./img/reviews/reviews-img-2-desktop.jpg" srcset="./img/reviews/reviews-img-2-desktop@2x.jpg 2x" type="image/jpeg" width="258" height="253" alt="Фото Ивана в горах.">
+                      </picture>
+                    </div>
+                    <div class="reviews__info">
+                      <p>
+                        Хороший полноценный поход с&nbsp;разнообразными
+                        локациями. В начале дорога идет по лыжне, далее прошли
+                        мимо полигона, по болотам, у озер и лесных ручьев,
+                        остатков дач конца 19 века. Было очень интересно!
+                      </p>
+                      <p>
+                        Инструктор Федор дружелюбный, внимательный к технике
+                        безопасности и своим туристам. Всем советую этот тур.
+                      </p>
+                      <h3>Иван Соловьев</h3>
+                      <span>25 лет, Владивосток</span>
+                    </div>
+                  </div>
+
+                  <div class="reviews__swiper-slide swiper-slide">
+                    <div class="reviews__img-wrapper">
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="./img/reviews/reviews-img-3-mobile.webp 1x, ./img/reviews/reviews-img-3-mobile@2x.webp 2x" width="280" height="169">
+                        <source type="image/webp" media="(max-width: 1199px)" srcset="./img/reviews/reviews-img-3-tablet.webp 1x, ./img/reviews/reviews-img-3-tablet@2x.webp 2x" width="186" height="237">
+                        <source type="image/webp" media="(min-width: 1200px)" srcset="./img/reviews/reviews-img-3-desktop.webp 1x, ./img/reviews/reviews-img-3-desktop@2x.webp 2x" width="258" height="253">
+                        <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/reviews/reviews-img-3-mobile.jpg 1x, ./img/reviews/reviews-img-3-mobile@2x.jpg 2x" width="280" height="169">
+                        <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/reviews/reviews-img-3-tablet.jpg 1x, ./img/viewsurs/reviews-img-3-tablet@2x.jpg 2x" width="186" height="237">
+                        <img src="./img/reviews/reviews-img-3-desktop.jpg" srcset="./img/reviews/reviews-img-3-desktop@2x.jpg 2x" type="image/jpeg" width="258" height="253" alt="Фото Евгении на природе.">
+                      </picture>
+                    </div>
+                    <div class="reviews__info">
+                      <p>
+                        Ранее не ходила на такие длинные дистанции. В первый
+                        день прошли около 30 км, физически я устала на 18 км,
+                        поэтому не была уверена, пройду ли до конца. Но я
+                        справилась. Второй день прошел легче, чем ожидала,
+                        видимо организм уже привык.
+                      </p>
+                      <p>
+                        Спасибо ребятам, инструкторам за помощь и поддержку!
+                        Я была  рада быть в такой компании.
+                      </p>
+                      <h3>Евгения Баженова</h3>
+                      <span>23 года, Кострома</span>
+                    </div>
+                  </div>
+
+                  <div class="reviews__swiper-slide swiper-slide">
+                    <div class="reviews__img-wrapper">
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="./img/reviews/reviews-img-4-mobile.webp 1x, ./img/reviews/reviews-img-4-mobile@2x.webp 2x" width="280" height="169">
+                        <source type="image/webp" media="(max-width: 1199px)" srcset="./img/reviews/reviews-img-4-tablet.webp 1x, ./img/reviews/reviews-img-4-tablet@2x.webp 2x" width="186" height="237">
+                        <source type="image/webp" media="(min-width: 1200px)" srcset="./img/reviews/reviews-img-4-desktop.webp 1x, ./img/reviews/reviews-img-4-desktop@2x.webp 2x" width="258" height="253">
+                        <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/reviews/reviews-img-4-mobile.jpg 1x, ./img/reviews/reviews-img-4-mobile@2x.jpg 2x" width="280" height="169">
+                        <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/reviews/reviews-img-4-tablet.jpg 1x, ./img/viewsurs/reviews-img-4-tablet@2x.jpg 2x" width="186" height="237">
+                        <img src="./img/reviews/reviews-img-4-desktop.jpg" srcset="./img/reviews/reviews-img-4-desktop@2x.jpg 2x" type="image/jpeg" width="258" height="253" alt="Фото Елены на треке.">
+                      </picture>
+                    </div>
+                    <div class="reviews__info">
+                      <p>
+                        Это был опыт, изменивший мою жизнь! Думала, не
+                        справлюсь, но все получилось! Дух захватывает, когда
+                        наконец-то, преодолев все трудности и препятствия,
+                        взбираешься на вершину.
+                      </p>
+                      <p>
+                        У нас собралась потрясающая команда. Все друг друга
+                        поддерживали, по вечерам мы сидели вместе у костра
+                        и пели песни. Обязательно повторю такое приключение!
+                      </p>
+                      <h3>Елена Пирогова</h3>
+                      <span>37 лет, Тюмень</span>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
 
         <section class="main__consultation-form consultation-form">
           <div class="container">
