пиксель перфект блок туры

--- a/source/index.html
+++ b/source/index.html
@@ -278,39 +278,62 @@
                         <img src="./img/tours/elbrus-desktop.jpg" srcset="./img/tours/elbrus-desktop@2x.jpg 2x" type="image/jpeg" alt="Вид на Эльбрус.">
                       </picture>
                     </div>
+
                     <div class="tours__info">
-                      <div class="tours__info-location">
-                        <svg width="16" height="16">
-                          <use href="./img/sprite.svg#tours-pin"></use>
-                        </svg>
-                        <span>Кавказ</span>
+                      <div class="tours__details-top">
+                        <div class="tours__place tours__place--caucasus">
+                          <svg width="16" height="16">
+                            <use href="./img/sprite.svg#tours-pin"></use>
+                          </svg>
+                          <p>Кавказ</p>
+                        </div>
+                        <div class="tours__duration-wrapper">
+                          <div class="tours__days tours__days--caucasus">
+                            <svg width="20" height="20">
+                              <use href="./img/sprite.svg#sun"></use>
+                            </svg>
+                            <p>4 дня</p>
+                          </div>
+                          <div class="tours__nights tours__nights--caucasus">
+                            <svg width="20" height="20">
+                              <use href="./img/sprite.svg#moon"></use>
+                            </svg>
+                            <p>3 ночи</p>
+                          </div>
+                        </div>
                       </div>
-                      <div class="tours__info-days">
-                        <svg width="20" height="20">
-                          <use href="./img/sprite.svg#sun"></use>
-                        </svg>
-                        <span>4 дня</span>
-                      </div>
-                      <div class="tours__info-nights">
-                        <svg width="20" height="20">
-                          <use href="./img/sprite.svg#moon"></use>
-                        </svg>
-                        <span>3 ночи</span>
-                      </div>
-                    </div>
-                    <h3>Путешествие<br>вокруг Эльбруса</h3>
-                    <div class="tours__details">
-                      <div class="tours__details-level">
-                        <p>Сложность:</p>
-                      </div>
-                      <div class="tours__details-recruitment-dates:">
-                        <p>Даты набора:</p>
-                        <span>12.06-19.06</span>
-                      </div>
-                      <div class="tours__details-group">
-                        <p>Группа:</p>
-                        <span>до 15 чел.</span>
-                      </div>
+                      <h3>Путешествие вокруг Эльбруса</h3>
+                      <div class="tours__line"></div>
+                      <ul class="tours__details">
+                        <li class="tours__complexity">
+                          <p>Сложность:</p>
+                          <span class="tours__star">
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-empty" width="15" height="14" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-empty"></use>
+                            </svg>
+                          </span>
+                        </li>
+                        <li class="tours__date">
+                          <p>Даты набора:</p>
+                          <span>12.06-19.06</span>
+                        </li>
+                        <li class="tours__group">
+                          <p>Группа:</p>
+                          <span>до 15 чел.</span>
+                        </li>
+                      </ul>
                     </div>
                   </div>
 
@@ -327,38 +350,60 @@
                       </picture>
                     </div>
                     <div class="tours__info">
-                      <div class="tours__info-location">
-                        <svg width="16" height="16">
-                          <use href="./img/sprite.svg#tours-pin"></use>
-                        </svg>
-                        <span>Алтай</span>
+                      <div class="tours__details-top">
+                        <div class="tours__place tours__place--caucasus">
+                          <svg width="16" height="16">
+                            <use href="./img/sprite.svg#tours-pin"></use>
+                          </svg>
+                          <p>Алтай</p>
+                        </div>
+                        <div class="tours__duration-wrapper">
+                          <div class="tours__days tours__days--caucasus">
+                            <svg width="20" height="20">
+                              <use href="./img/sprite.svg#sun"></use>
+                            </svg>
+                            <p>14 дней</p>
+                          </div>
+                          <div class="tours__nights tours__nights--caucasus">
+                            <svg width="20" height="20">
+                              <use href="./img/sprite.svg#moon"></use>
+                            </svg>
+                            <p>13 ночей</p>
+                          </div>
+                        </div>
                       </div>
-                      <div class="tours__info-days">
-                        <svg width="20" height="20">
-                          <use href="./img/sprite.svg#sun"></use>
-                        </svg>
-                        <span>14 дней</span>
-                      </div>
-                      <div class="tours__info-nights">
-                        <svg width="20" height="20">
-                          <use href="./img/sprite.svg#moon"></use>
-                        </svg>
-                        <span>13 ночей</span>
-                      </div>
-                    </div>
-                    <h3>Путь к подножию<br>Белухи</h3>
-                    <div class="tours__details">
-                      <div class="tours__details-level">
-                        <p>Сложность:</p>
-                      </div>
-                      <div class="tours__details-recruitment-dates:">
-                        <p>Даты набора:</p>
-                        <span>14.06–23.06</span>
-                      </div>
-                      <div class="tours__details-group">
-                        <p>Группа:</p>
-                        <span>до 25 чел.</span>
-                      </div>
+                      <h3>Путь к подножию Белухи</h3>
+                      <div class="tours__line"></div>
+                      <ul class="tours__details">
+                        <li class="tours__complexity">
+                          <p>Сложность:</p>
+                          <span class="tours__star">
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-empty" width="15" height="14" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-empty"></use>
+                            </svg>
+                            <svg class="tours__star-empty" width="15" height="14" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-empty"></use>
+                            </svg>
+                          </span>
+                        </li>
+                        <li class="tours__date">
+                          <p>Даты набора:</p>
+                          <span>14.06-23.06</span>
+                        </li>
+                        <li class="tours__group">
+                          <p>Группа:</p>
+                          <span>до 25 чел.</span>
+                        </li>
+                      </ul>
                     </div>
                   </div>
 
@@ -377,38 +422,60 @@
                       </picture>
                     </div>
                     <div class="tours__info">
-                      <div class="tours__info-location">
-                        <svg width="16" height="16">
-                          <use href="./img/sprite.svg#tours-pin"></use>
-                        </svg>
-                        <span>Адыгея</span>
+                      <div class="tours__details-top">
+                        <div class="tours__place tours__place--caucasus">
+                          <svg width="16" height="16">
+                            <use href="./img/sprite.svg#tours-pin"></use>
+                          </svg>
+                          <p>Адыгея</p>
+                        </div>
+                        <div class="tours__duration-wrapper">
+                          <div class="tours__days tours__days--caucasus">
+                            <svg width="20" height="20">
+                              <use href="./img/sprite.svg#sun"></use>
+                            </svg>
+                            <p>7 дней</p>
+                          </div>
+                          <div class="tours__nights tours__nights--caucasus">
+                            <svg width="20" height="20">
+                              <use href="./img/sprite.svg#moon"></use>
+                            </svg>
+                            <p>6 ночей</p>
+                          </div>
+                        </div>
                       </div>
-                      <div class="tours__info-days">
-                        <svg width="20" height="20">
-                          <use href="./img/sprite.svg#sun"></use>
-                        </svg>
-                        <span>7 дней</span>
-                      </div>
-                      <div class="tours__info-nights">
-                        <svg width="20" height="20">
-                          <use href="./img/sprite.svg#moon"></use>
-                        </svg>
-                        <span>6 ночей</span>
-                      </div>
-                    </div>
-                    <h3>Через Фишт<br> к Чёрному морю <br> и обратно</h3>
-                    <div class="tours__details">
-                      <div class="tours__details-level">
-                        <p>Сложность:</p>
-                      </div>
-                      <div class="tours__details-recruitment-dates:">
-                        <p>Даты набора:</p>
-                        <span>15.07–19.07</span>
-                      </div>
-                      <div class="tours__details-group">
-                        <p>Группа:</p>
-                        <span>до 22 чел.</span>
-                      </div>
+                      <h3>Через Фишт к&nbsp;Чёрному морю и&nbsp;обратно</h3>
+                      <div class="tours__line"></div>
+                      <ul class="tours__details">
+                        <li class="tours__complexity">
+                          <p>Сложность:</p>
+                          <span class="tours__star">
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-empty" width="15" height="14" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-empty"></use>
+                            </svg>
+                          </span>
+                        </li>
+                        <li class="tours__date">
+                          <p>Даты набора:</p>
+                          <span>15.07-19.07</span>
+                        </li>
+                        <li class="tours__group">
+                          <p>Группа:</p>
+                          <span>до 22 чел.</span>
+                        </li>
+                      </ul>
                     </div>
                   </div>
 
@@ -426,39 +493,62 @@
                         <img src="./img/tours/elbrus-desktop.jpg" srcset="./img/tours/elbrus-desktop@2x.jpg 2x" type="image/jpeg" alt="Вид на Эльбрус.">
                       </picture>
                     </div>
+
                     <div class="tours__info">
-                      <div class="tours__info-location">
-                        <svg width="16" height="16">
-                          <use href="./img/sprite.svg#tours-pin"></use>
-                        </svg>
-                        <span>Кавказ</span>
+                      <div class="tours__details-top">
+                        <div class="tours__place tours__place--caucasus">
+                          <svg width="16" height="16">
+                            <use href="./img/sprite.svg#tours-pin"></use>
+                          </svg>
+                          <p>Кавказ</p>
+                        </div>
+                        <div class="tours__duration-wrapper">
+                          <div class="tours__days tours__days--caucasus">
+                            <svg width="20" height="20">
+                              <use href="./img/sprite.svg#sun"></use>
+                            </svg>
+                            <p>4 дня</p>
+                          </div>
+                          <div class="tours__nights tours__nights--caucasus">
+                            <svg width="20" height="20">
+                              <use href="./img/sprite.svg#moon"></use>
+                            </svg>
+                            <p>3 ночи</p>
+                          </div>
+                        </div>
                       </div>
-                      <div class="tours__info-days">
-                        <svg width="20" height="20">
-                          <use href="./img/sprite.svg#sun"></use>
-                        </svg>
-                        <span>4 дня</span>
-                      </div>
-                      <div class="tours__info-nights">
-                        <svg width="20" height="20">
-                          <use href="./img/sprite.svg#moon"></use>
-                        </svg>
-                        <span>3 ночи</span>
-                      </div>
-                    </div>
-                    <h3>Путешествие<br>вокруг Эльбруса</h3>
-                    <div class="tours__details">
-                      <div class="tours__details-level">
-                        <p>Сложность:</p>
-                      </div>
-                      <div class="tours__details-recruitment-dates:">
-                        <p>Даты набора:</p>
-                        <span>12.06-19.06</span>
-                      </div>
-                      <div class="tours__details-group">
-                        <p>Группа:</p>
-                        <span>до 15 чел.</span>
-                      </div>
+                      <h3>Путешествие вокруг Эльбруса</h3>
+                      <div class="tours__line"></div>
+                      <ul class="tours__details">
+                        <li class="tours__complexity">
+                          <p>Сложность:</p>
+                          <span class="tours__star">
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-full" width="16" height="16" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg class="tours__star-empty" width="15" height="14" aria-hidden="true">
+                              <use xlink:href="./img/sprite.svg#star-empty"></use>
+                            </svg>
+                          </span>
+                        </li>
+                        <li class="tours__date">
+                          <p>Даты набора:</p>
+                          <span>12.06-19.06</span>
+                        </li>
+                        <li class="tours__group">
+                          <p>Группа:</p>
+                          <span>до 15 чел.</span>
+                        </li>
+                      </ul>
                     </div>
                   </div>
 
