--- a/source/index.html
+++ b/source/index.html
@@ -984,6 +984,95 @@
           </div>
         </section>
 
+        <section class="main__gallery gallery" id="gallery">
+          <div class="gallery__wrapper">
+            <div class="gallery__inner-wrapper">
+              <div class="gallery__title-wrapper">
+                <h2>Фотогалерея</h2>
+                <span>Фотогалерея</span>
+              </div>
+              <p>
+                Добавляйте фото в Instagram с&nbsp;хэштегом #лайфтур, а&nbsp;также отмечайте нас&nbsp;на&nbsp;фото.
+                <br>
+                Лучшие фотографии украсят этот раздел нашего сайта.
+              </p>
+              <div class="gallery__swiper-buttons">
+                <button class="gallery__swiper-button gallery__swiper-button--prev" type="button">
+                  <svg width="15" height="9">
+                    <use href="./img/sprite.svg#arrow-left"></use>
+                  </svg>
+                </button>
+                <button class="gallery__swiper-button gallery__swiper-button--next" type="button">
+                  <svg width="15" height="9">
+                    <use href="./img/sprite.svg#arrow-right"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <!-- Slider main container -->
+            <div class="gallery__swiper swiper">
+              <!-- Additional required wrapper -->
+              <div class="gallery__swiper-wrapper swiper-wrapper">
+                <!-- Slides -->
+                <div class="gallery__swiper-slide swiper-slide">
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-1.webp 1x, img/gallery/gallery-1@2x.webp 2x">
+                    <img src="img/gallery/gallery-1.jpg" srcset="img/gallery/gallery-1@2x.jpg 2x" type="image/jpeg" alt="Путешественник на краю вершины.">
+                  </picture>
+                </div>
+
+                <div class="gallery__swiper-slide swiper-slide">
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-2.webp 1x, img/gallery/gallery-2@2x.webp 2x">
+                    <img src="img/gallery/gallery-2.jpg" srcset="img/gallery/gallery-2@2x.jpg 2x" type="image/jpeg" alt="Туристы у костра.">
+                  </picture>
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-3.webp 1x, img/gallery/gallery-3@2x.webp 2x">
+                    <img src="img/gallery/gallery-3.jpg" srcset="img/gallery/gallery-3@2x.jpg 2x" type="image/jpeg" alt="Компас в руке на фоне гор.">
+                  </picture>
+                </div>
+
+                <div class="gallery__swiper-slide swiper-slide">
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-4.webp 1x, img/gallery/gallery-4@2x.webp 2x">
+                    <img src="img/gallery/gallery-4.jpg" srcset="img/gallery/gallery-4@2x.jpg 2x" type="image/jpeg" alt="Горный туризм.">
+                  </picture>
+                </div>
+
+                <div class="gallery__swiper-slide swiper-slide">
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-5.webp 1x, img/gallery/gallery-5@2x.webp 2x">
+                    <img src="img/gallery/gallery-5.jpg" srcset="img/gallery/gallery-5@2x.jpg 2x" type="image/jpeg" alt="Зимний туризм.">
+                  </picture>
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-6.webp 1x, img/gallery/gallery-6@2x.webp 2x">
+                    <img src="img/gallery/gallery-6.jpg" srcset="img/gallery/gallery-6@2x.jpg 2x" type="image/jpeg" alt="Палатка на фоне звездного неба.">
+                  </picture>
+                </div>
+
+                <div class="gallery__swiper-slide swiper-slide">
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-7.webp 1x, img/gallery/gallery-7@2x.webp 2x">
+                    <img src="img/gallery/gallery-7.jpg" srcset="img/gallery/gallery-7@2x.jpg 2x" type="image/jpeg" alt="Туристы у костра">
+                  </picture>
+                </div>
+
+                <div class="gallery__swiper-slide swiper-slide">
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-2.webp 1x, img/gallery/gallery-2@2x.webp 2x">
+                    <img src="img/gallery/gallery-2.jpg" srcset="img/gallery/gallery-2@2x.jpg 2x" type="image/jpeg" alt="Туристы у костра.">
+                  </picture>
+                  <picture>
+                    <source type="image/webp" srcset="img/gallery/gallery-3.webp 1x, img/gallery/gallery-3@2x.webp 2x">
+                    <img src="img/gallery/gallery-3.jpg" srcset="img/gallery/gallery-3@2x.jpg 2x" type="image/jpeg" alt="Компас в руке на фоне гор.">
+                  </picture>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </section>
+
 
         <section class="main__consultation-form consultation-form">
           <div class="container">
