--- a/source/index.html
+++ b/source/index.html
@@ -115,7 +115,7 @@
                         loading="lazy"
                         tabindex="-1">
                       </iframe>
-                      <button class="hero__video-button" data-video-play aria-label="Запустить видео.">
+                      <button class="hero__video-button" data-play-button aria-label="Запустить видео.">
                         <svg width="12" height="22">
                           <use href="img/sprite.svg#video-button"></use>
                         </svg>
