--- a/source/index.html
+++ b/source/index.html
@@ -572,7 +572,7 @@
             </div>
           </div>
 
-          <div class="tours__background">
+          <div class="tours__decotation">
             <picture>
               <source type="image/webp" media="(max-width: 767px)" srcset="./img/clouds/clouds-mountain-mobile.webp 1x, ./img/clouds/clouds-mountain-mobile@2x.webp 2x" width="171" height="595">
               <source type="image/webp" media="(max-width: 1199px)" srcset="./img/clouds/clouds-mountain-tablet.webp 1x, ./img/clouds/clouds-mountain-tablet@2x.webp 2x" width="602" height="1364">
@@ -806,6 +806,15 @@
               </div>
             </div>
           </div>
+
+          <div class="education__decotation">
+            <picture>
+              <source type="image/webp" media="(max-width: 1199px)" srcset="./img/clouds/education-bg-clouds-tablet.webp 1x, ./img/clouds/education-bg-clouds-tablet@2x.webp 2x" width="465" height="280">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="./img/clouds/education-bg-clouds-desktop.webp 1x, ./img/clouds/education-bg-clouds-desktop@2x.webp 2x" width="620" height="280">
+              <source media="(max-width: 1199px)" type="image/png" srcset="./img/clouds/education-bg-clouds-tablet.png 1x, ./img/clouds/education-bg-clouds-tablet@2x.png 2x" width="465" height="280">
+              <img src="./img/clouds/education-bg-clouds-desktop.png" srcset="./img/clouds/education-bg-clouds-desktop@2x.png 2x" type="image/png" width="620" height="280" alt="Облако.">
+            </picture>
+          </div>
         </section>
 
 
@@ -991,11 +1000,11 @@
           </div>
         </section>
 
-        <section class="advantages">
+        <section class="main__advantages advantages">
           <div class="advantages__container container">
             <div class="advantages__title-wrapper">
-              <h2>Отзывы</h2>
-              <span>Отзывы</span>
+              <h2>Преимущества</h2>
+              <span>Преимущества</span>
             </div>
             <!-- Slider main container -->
             <div class="advantages__swiper swiper">
@@ -1073,14 +1082,26 @@
               </button>
             </div>
           </div>
-          <picture>
-            <source type="image/webp" media="(max-width: 1023px)" srcset="./img/clouds/advantages-bg-clouds-tablet.webp 1x, ./img/clouds/advantages-bg-clouds-tablet@2x.webp 2x" width="768" height="996">
-            <source type="image/webp" media="(max-width: 1199px)" srcset="./img/clouds/advantages-bg-clouds-laptop.webp 1x, ./img/clouds/advantages-bg-clouds-laptop@2x.webp 2x" width="1024" height="996">
-            <source type="image/webp" media="(min-width: 1200px)" srcset="./img/clouds/advantages-bg-clouds-desktop.webp 1x, ./img/clouds/advantages-bg-clouds-desktop@2x.webp 2x" width="1440" height="447">
-            <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/clouds/advantages-bg-clouds-tablet.jpg 1x, ./img/clouds/advantages-bg-clouds-tablet@2x.jpg 2x" width="768" height="996">
-            <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/clouds/advantages-bg-clouds-laptop.jpg 1x, ./img/clouds/advantages-bg-clouds-laptop@2x.jpg 2x" width="1024" height="996">
-            <img src="./img/clouds/advantages-bg-clouds-desktop.jpg" srcset="./img/clouds/advantages-bg-clouds-desktop@2x.jpg 2x" type="image/jpeg" width="1440" height="447" alt="Облако.">
-          </picture>
+          <div class="advantages__decoration advantages__decoration--top">
+            <picture>
+              <source type="image/webp" media="(max-width: 1023px)" srcset="./img/clouds/advantages-bg-clouds-top-tablet.webp 1x, ./img/clouds/advantages-bg-clouds-top-tablet@2x.webp 2x" width="753" height="402">
+              <source type="image/webp" media="(max-width: 1199px)" srcset="./img/clouds/advantages-bg-clouds-top-laptop.webp 1x, ./img/clouds/advantages-bg-clouds-top-laptop@2x.webp 2x" width="881" height="402">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="./img/clouds/advantages-bg-clouds-top-desktop.webp 1x, ./img/clouds/advantages-bg-clouds-top-desktop@2x.webp 2x" width="875" height="402">
+              <source media="(max-width: 1023px)" type="image/png" srcset="./img/clouds/advantages-bg-clouds-top-tablet.png 1x, ./img/clouds/advantages-bg-clouds-top-tablet@2x.png 2x" width="753" height="402">
+              <source media="(max-width: 1199px)" type="image/png" srcset="./img/clouds/advantages-bg-clouds-top-laptop.png 1x, ./img/clouds/advantages-bg-clouds-top-laptop@2x.png 2x" width="881" height="402">
+              <img src="./img/clouds/advantages-bg-clouds-top-desktop.png" srcset="./img/clouds/advantages-bg-clouds-top-desktop@2x.png 2x" type="image/png" width="875" height="402" alt="Облако.">
+            </picture>
+          </div>
+          <div class="advantages__decoration advantages__decoration--bottom">
+            <picture>
+              <source type="image/webp" media="(max-width: 1023px)" srcset="./img/clouds/advantages-bg-clouds-bottom-tablet.webp 1x, ./img/clouds/advantages-bg-clouds-bottom-tablet@2x.webp 2x" width="555" height="263">
+              <source type="image/webp" media="(max-width: 1199px)" srcset="./img/clouds/advantages-bg-clouds-bottom-laptop.webp 1x, ./img/clouds/advantages-bg-clouds-bottom-laptop@2x.webp 2x" width="683" height="263">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="./img/clouds/advantages-bg-clouds-bottom-desktop.webp 1x, ./img/clouds/advantages-bg-clouds-bottom-desktop@2x.webp 2x" width="462" height="263">
+              <source media="(max-width: 1023px)" type="image/png" srcset="./img/clouds/advantages-bg-clouds-bottom-tablet.png 1x, ./img/clouds/advantages-bg-clouds-bottom-tablet@2x.png 2x" width="555" height="263">
+              <source media="(max-width: 1199px)" type="image/png" srcset="./img/clouds/advantages-bg-clouds-bottom-laptop.png 1x, ./img/clouds/advantages-bg-clouds-bottom-laptop@2x.png 2x" width="683" height="263">
+              <img src="./img/clouds/advantages-bg-clouds-bottom-desktop.png" srcset="./img/clouds/advantages-bg-clouds-bottom-desktop@2x.png 2x" type="image/png" width="462" height="263" alt="Облако.">
+            </picture>
+          </div>
         </section>
 
 
