--- a/source/index.html
+++ b/source/index.html
@@ -584,7 +584,7 @@
           </div>
         </section>
 
-        <section class="main__education education">
+        <section class="main__education education" id="education">
           <div class="container">
             <div class="education__wrapper">
               <div class="education__text-wrapper" >
